<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.scracture.model.toolbar.login.Login" />
        <variable
            name="loginInfo"
            type="Login"/>
    </data>
    <RelativeLayout
        android:orientation="vertical"
        tools:ignore="MissingPrefix"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:visibility="invisible"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            style="@style/TextViewCommon"
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_20"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/txt_your_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                style="@style/TextViewCommon15sp"
                android:hint="@string/txt__hint_your_email_address"
                android:padding="@dimen/margin_10"
                android:background="@drawable/background_hollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewCommon15sp"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                style="@style/TextViewCommon15sp"
                android:hint="@string/txt_hint_your_password"
                android:padding="@dimen/margin_10"
                android:background="@drawable/background_hollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/TextViewCommon15sp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_shadow_corner"
                android:text="@string/txt_login"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</layout>