<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_landing"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scracture.controller.activities.login.landing.LandingActivity">
    <RelativeLayout
        android:paddingBottom="@dimen/margin_70"
        android:paddingRight="@dimen/margin_50"
        android:paddingLeft="@dimen/margin_50"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            fontPath="fonts/OpenSans-Bold.ttf"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            style="@style/TextViewCommon"
            android:text="Dummy"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            fontPath="fonts/OpenSans-Bold.ttf"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_shadow_corner"
            android:textAllCaps="false"
            android:text="@string/txt_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            fontPath="fonts/OpenSans-Bold.ttf"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_shadow_corner"
            android:textAllCaps="false"
            android:text="@string/txt_signup"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <TextView
        fontPath="fonts/OpenSans-Bold.ttf"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/txt_forgot_password"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
